# spotify-to-plex

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  ruff.toml
.github/workflows/: docker-image.yml
spotify_to_plex/: __init__.py  config.py  main.py
spotify_to_plex/modules/: __init__.py
spotify_to_plex/modules/lidarr/: main.py
spotify_to_plex/modules/plex/: __init__.py  main.py
spotify_to_plex/modules/spotify/: __init__.py  main.py
spotify_to_plex/modules/spotify_to_plex/: __init__.py  main.py
spotify_to_plex/utils/: __init__.py  cache.py  logging_utils.py
